documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef float FLOAT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

/**
*
*  L71 Driver functions.
*
**/

L71W32API ERRVAL __stdcall L71_CardClose(HCARD handleval);

L71W32API HCARD __stdcall L71_CardOpen(INT cardnum);

L71W32API VOID __stdcall L71_CardReset(HCARD handleval);

L71W32API ERRVAL __stdcall L71_CardStart(HCARD handleval);

L71W32API BOOL __stdcall L71_CardStop(HCARD handleval);

L71W32API USHORT __stdcall L71_FieldGetAngle(LPUSHORT buf);

L71W32API FLOAT __stdcall L71_FieldGetAngleFl(LPUSHORT buf);

L71W32API USHORT __stdcall L71_FieldGetControlAccept(LPUSHORT buf);

L71W32API USHORT __stdcall L71_FieldGetData(INT binnum,LPUSHORT buf);

L71W32API USHORT __stdcall L71_FieldGetDataAccept(LPUSHORT buf);

L71W32API USHORT __stdcall L71_FieldGetFaults(LPUSHORT buf);

L71W32API INT __stdcall L71_FieldGetGain(LPUSHORT buf);

L71W32API USHORT __stdcall L71_FieldGetLabel(LPUSHORT buf);

L71W32API USHORT __stdcall L71_FieldGetMode(LPUSHORT buf);

L71W32API INT __stdcall L71_FieldGetRange(LPUSHORT buf);

L71W32API USHORT __stdcall L71_FieldGetTilt(LPUSHORT buf);

L71W32API FLOAT __stdcall L71_FieldGetTiltFl(LPUSHORT buf);

L71W32API USHORT __stdcall L71_FieldPutAngle(USHORT value,LPUSHORT buf);

L71W32API FLOAT __stdcall L71_FieldPutAngleFl(FLOAT angle,LPUSHORT buf);

L71W32API USHORT __stdcall L71_FieldPutControlAccept(USHORT value,LPUSHORT buf);

L71W32API USHORT __stdcall L71_FieldPutData(USHORT value,INT binnum,LPUSHORT buf);

L71W32API USHORT __stdcall L71_FieldPutDataAccept(USHORT value,LPUSHORT buf);

L71W32API USHORT __stdcall L71_FieldPutFaults(USHORT value,LPUSHORT buf);

L71W32API INT __stdcall L71_FieldPutGain(INT gain,LPUSHORT buf);

L71W32API USHORT __stdcall L71_FieldPutLabel(USHORT value,LPUSHORT buf);

L71W32API USHORT __stdcall L71_FieldPutMode(USHORT value,LPUSHORT buf);

L71W32API INT __stdcall L71_FieldPutRange(INT range,LPUSHORT buf);

L71W32API USHORT __stdcall L71_FieldPutTilt(USHORT value,LPUSHORT buf);

L71W32API FLOAT __stdcall L71_FieldPutTiltFl(FLOAT tilt,LPUSHORT buf);

L71W32API ERRVAL __stdcall L71_IntInstall(LPVOID hEvent,HCARD handleval);

L71W32API ULONG __stdcall L71_IntRd(LPUSHORT typeval,LPUSHORT infoval,HCARD handleval);

L71W32API INT __stdcall L71_IntStatus(HCARD handleval);

L71W32API ERRVAL __stdcall L71_IntUninstall(HCARD handleval);

L71W32API ERRVAL __stdcall L71_RcvConfig(HCARD handleval);

L71W32API ERRVAL __stdcall L71_RcvConfigEx(ULONG rtconfigval,USHORT intfreq,HCARD handleval);

L71W32API ULONG __stdcall L71_RcvMonBlkRd(LPUSHORT buf,ULONG bufcount,LPULONG blkcnt,HCARD handleval);

L71W32API ULONG __stdcall L71_RcvMonBlkRdEx(LPUSHORT buf,ULONG bufcount,ULONG maxblkcnt,LPULONG blkcnt,HCARD handleval);

L71W32API USHORT __stdcall L71_RcvMonRd(LPUSHORT buf,HCARD handleval);

L71W32API USHORT __stdcall L71_RcvMonRdEx(LPUSHORT buf,USHORT index,HCARD handleval);

L71W32API BOOL __stdcall L71_RcvMonStatus(HCARD handleval);

L71W32API VOID __stdcall L71_RcvRd(LPUSHORT buf,HCARD handleval);

L71W32API ERRVAL __stdcall L71_XmtConfig(USHORT framefreq,HCARD handleval);

L71W32API ERRVAL __stdcall L71_XmtConfigEx(USHORT framefreq,USHORT intfreq,USHORT framecount,HCARD handleval);

L71W32API ERRVAL __stdcall L71_XmtConfigExx(ULONG xmtconfigval,USHORT framefreq,USHORT intfreq,USHORT framecount,HCARD handleval);

L71W32API VOID __stdcall L71_XmtRd(LPUSHORT buf,USHORT framenum,HCARD handleval);

L71W32API BOOL __stdcall L71_XmtStatus(HCARD handleval);

L71W32API VOID __stdcall L71_XmtWr(LPUSHORT buf,USHORT framenum,HCARD handleval);


/**
*
*  Internal functions used by the L71 Driver.
*
**/

L71W32API ULONG __stdcall L71_AddrDSP(ULONG addr);

L71W32API ULONG __stdcall L71_AddrHost(ULONG addr);

L71W32API ERRVAL __stdcall L71_BCConfig(ULONG configval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_BCConfigEx(ULONG configval,USHORT count,HCARD handleval);

L71W32API MSGADDR __stdcall L71_BCConfigMsg(ULONG configval,MSGADDR msgaddr,HCARD handleval);

L71W32API LISTADDR __stdcall L71_BCCreateList(ULONG listconfigval,INT count,ULONG msgconfigval,USHORT cwd1,USHORT cwd2,LPUSHORT data,HCARD handleval);