documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32NET.CS


        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardClose@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CardClose(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardOpen@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_CardOpen(Int32 cardnum);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardReset@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_CardReset(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardStart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CardStart(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardStop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CardStop(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldGetAngle@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_FieldGetAngle(ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldGetAngleFl@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Single L71_FieldGetAngleFl(ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldGetControlAccept@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_FieldGetControlAccept(ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldGetData@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_FieldGetData(Int32 binnum, ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldGetDataAccept@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_FieldGetDataAccept(ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldGetFaults@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_FieldGetFaults(ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldGetGain@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_FieldGetGain(ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldGetLabel@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_FieldGetLabel(ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldGetMode@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_FieldGetMode(ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldGetRange@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_FieldGetRange(ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldGetTilt@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_FieldGetTilt(ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldGetTiltFl@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Single L71_FieldGetTiltFl(ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldPutAngle@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_FieldPutAngle(UInt16 value, ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldPutAngleFl@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Single L71_FieldPutAngleFl(Single angle, ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldPutControlAccept@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_FieldPutControlAccept(UInt16 value, ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldPutData@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_FieldPutData(UInt16 value, Int32 binnum, ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldPutDataAccept@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_FieldPutDataAccept(UInt16 value, ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldPutFaults@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_FieldPutFaults(UInt16 value, ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldPutGain@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_FieldPutGain(Int32 gain, ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldPutLabel@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_FieldPutLabel(UInt16 value, ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldPutMode@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_FieldPutMode(UInt16 value, ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldPutRange@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_FieldPutRange(Int32 range, ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldPutTilt@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_FieldPutTilt(UInt16 value, ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FieldPutTiltFl@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Single L71_FieldPutTiltFl(Single tilt, ref UInt16 buf);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_IntInstall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_IntInstall(IntPtr hevent, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_IntRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_IntRd(ref UInt16 typevalval, ref UInt16 infoval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_IntStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_IntStatus(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_IntUninstall@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_IntUninstall(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RcvConfig@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_RcvConfig(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RcvConfigEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_RcvConfigEx(UInt32 rtconfigval, UInt16 intfreq, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RcvMonBlkRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_RcvMonBlkRd(ref UInt16 buf, UInt32 bufcount, ref UInt32 blkcnt, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RcvMonBlkRdEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_RcvMonBlkRdEx(ref UInt16 buf, UInt32 bufcount, UInt32 maxblkcnt, ref UInt32 blkcnt, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RcvMonRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_RcvMonRd(ref UInt16 buf, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RcvMonRdEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_RcvMonRdEx(ref UInt16 buf, UInt16 index, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RcvMonStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_RcvMonStatus(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_RcvRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_RcvRd(ref UInt16 buf, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_XmtConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_XmtConfig(UInt16 framefreq, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_XmtConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_XmtConfigEx(UInt16 framefreq, UInt16 intfreq, UInt16 framecount, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_XmtConfigExx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_XmtConfigExx(UInt32 xmtconfigval, UInt16 framefreq, UInt16 intfreq, UInt16 framecount, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_XmtRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_XmtRd(ref UInt16 buf, UInt16 framenum, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_XmtStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_XmtStatus(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_XmtWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_XmtWr(ref UInt16 buf, UInt16 framenum, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_AddrDSP@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_AddrDSP(UInt32 addr);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_AddrHost@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_AddrHost(UInt32 addr);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCConfig(UInt32 configval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCConfigEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCConfigEx(UInt32 configval, UInt16 count, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCConfigMsg@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_BCConfigMsg(UInt32 configval, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCCreateList@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_BCCreateList(UInt32 listconfigval, Int32 count, UInt32 msgconfigval, UInt16 cwd1, UInt16 cwd2, ref UInt16 data, UInt32 handleval);
